<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle__registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.melyna.apptrabajo1.Detalle_Registro">

    <TextView
        android:id="@+id/dTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_detalle"
        android:textSize="@dimen/titulo"
        android:textColor="@color/negro"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/dNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dTitulo"
        android:text="@string/nombre_detalle"
        android:textSize="@dimen/tamano_texto"
        android:layout_marginTop="@dimen/margen_dtexto"
        />
    <TextView
        android:id="@+id/dFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dNombre"
        android:text="@string/fecha_detalle"
        android:textSize="@dimen/tamano_texto"
        android:layout_marginTop="@dimen/margen_dtexto"/>

    <TextView
        android:id="@+id/dTelefono"
        android:layout_below="@+id/dFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono_detalle"
        android:textSize="@dimen/tamano_texto"
        android:layout_marginTop="@dimen/margen_dtexto"
        />
    <TextView
        android:id="@+id/dEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dTelefono"
        android:text="@string/email_detalle"
        android:textSize="@dimen/tamano_texto"
        android:layout_marginTop="@dimen/margen_dtexto"
        />
    <TextView
        android:id="@+id/dDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dEmail"
        android:text="@string/descripcion_contacto"
        android:textSize="@dimen/tamano_texto"
        android:layout_marginTop="@dimen/margen_dtexto"/>
    <Button
        android:id="@+id/dEditarDatos"
        android:layout_marginTop="@dimen/margen_texto"
        android:layout_width="@dimen/detalle_width"
        android:layout_height="@dimen/detallle_height"
        android:layout_below="@+id/dDescripcion"
        android:text="@string/editar_detalle"
        android:textAllCaps="false"
        android:textSize="@dimen/tamano_boton"
        android:textColor="@color/blanco"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/colorPrimary"
        android:theme="@style/miRaisedBoton"
        android:onClick="EditarDatos"

        />
</RelativeLayout>
