<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mx.melyna.apptrabajo1.MainActivity"    >


    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        android:typeface="monospace"
        android:textColor="@color/negro"
        />



    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre"
        android:inputType="date"
        android:hint="@string/fecha"
        android:onClick="st"
        android:typeface="monospace"
        android:layout_marginTop="@dimen/margen_texto"
        />


    <EditText
        android:id="@+id/edTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFecha"
        android:hint="@string/telefono"
        android:typeface="monospace"
        android:layout_marginTop="@dimen/margen_texto"

        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edTelefono"
        android:hint="@string/email"
        android:typeface="monospace"
        android:layout_marginTop="@dimen/margen_texto"

        />


    <EditText
        android:id="@+id/etContactoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_contacto"
        android:layout_below="@+id/etEmail"
        android:typeface="monospace"
        android:layout_marginTop="@dimen/margen_texto"

        />


    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:gravity="center"
        android:typeface="monospace"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Ejecutar"
        android:textSize="@dimen/tamano_boton"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/blanco"
        android:theme="@style/miRaisedBoton"
        />






</RelativeLayout>
